# portfolio

./: README.md
LoadFileGenerator/: CMakeLists.txt  README.md  build.ps1  example_metadata.csv  sample_metadata.csv
LoadFileGenerator/include/: CSVParser.h  DATGenerator.h  Document.h  MainWindow.h  OPTGenerator.h  PDFProcessor.h  VolumeManager.h
LoadFileGenerator/src/: CSVParser.cpp  DATGenerator.cpp  MainWindow.cpp  OPTGenerator.cpp  PDFProcessor.cpp  VolumeManager.cpp  main.cpp
Monopoly/: board.py  main.py  player.py
Spell Game/: image_data.json  main.py  score_data.json
Word Crawler/: main.py
calculator/: Calculator-guy.py  advanced-cal.py  calculator.py
cyber security/: arp-extract.py  arp-monitor.py  ip_hopper.py  system-monitor.py
cyber security/network monitor/: packet_sniffer.py  ping_monitor.py
data analysis/: Marked Exercise 1.ipynb  modified_books.csv  modified_listings.csv  modified_phone_data.csv  modified_tolympics.csv
eco-turism webapp/: README.md  generate_secret_key.py  requirement.txt
eco-turism webapp/docs/: DEMO_DATA_GUIDE.md  DEPLOYMENT.md  IMPROVEMENTS.md  MANAGER_FEATURE_DOCUMENTATION.md  MIGRATION_INSTRUCTIONS.md  QUICK_START_MANAGER.md  SEARCH_IMPROVEMENTS.md  TEST_REPORT.md
guess the number/: main.py
imgBot/: main.py
joke telling/: main.py
web classroom/: README.md  requirements.txt  setup.bat  setup.sh  start_server.bat  start_server.sh  view_logs.bat  view_logs.sh
web classroom/docs/: DEPLOYMENT.md
web classroom/w_classroom/: ROOM_MANAGEMENT.md  check_setup.py  manage.py
web-cloning/: main.py
(+99 files in other folders)
